include/colyseus/predict/predict.h

struct colyseus_room;
/*
 * Predict — passive smoothing of the server stream for entities you DON'T
 * control (port of predict/Predictor.ts, passive engine). One read idiom:
 * colyseus_predict_value(p, instance, field) — lerp / extrapolate / damped /
 * reckon / raw per tracked field, raw instance fallback when untracked.
 *
 * Samples arrive via the schema callbacks layer (listen), stamped on the
 * server-time axis when a clock is present. Call colyseus_predict_tick once
 * per render frame.
 */
typedef struct colyseus_predict colyseus_predict_t;
/*
 * Create a Predict over a callbacks layer (`colyseus_callbacks_create(decoder)`)
 * and an optional server-synced clock. The clock drives the sample timestamp
 * axis, the lerp render target and the reckon horizon; NULL falls back to
 * local time (no server-time interpolation).
 */
colyseus_predict_t* colyseus_predict_create(
    colyseus_callbacks_t* callbacks,
    colyseus_room_clock_t* clock);
/**
 * The one-call entry point: a Predict scoped to `room`, owning the callbacks
 * layer it needs and wired to the room clock and fixed step. This is what an
 * app should use — colyseus_predict_create() is for tests and for sharing one
 * callbacks layer across several Predicts (lab-style per-mode overlays).
 */
colyseus_predict_t* colyseus_predict_for_room(struct colyseus_room* room);
void colyseus_predict_free(colyseus_predict_t* p);