include/colyseus/predict/spawns.h

/*
 * Predicted-spawn store (port of predict/predictedSpawns.ts) — optimistic,
 * server-reconciled ENTITIES (a fired bullet, a dropped item). Predicted
 * locals live OUTSIDE the schema collection; when the authoritative entity
 * arrives its onAdd is routed here and a pending local is correlated to it —
 * the two collapse onto ONE logical entry with a stable id (key sprites on
 * it; the handoff is invisible).
 *
 * Locals are opaque pointers owned by the app; local_free (optional) runs
 * when an entry that still holds a local dies.
 */
typedef struct colyseus_spawns colyseus_spawns_t;
typedef struct {
    int id;                        /* stable across the handoff */
    colyseus_schema_t* server;     /* authoritative instance; NULL while pending */
    void* local;                   /* predicted local; NULL for foreign entries */
    bool confirmed;
    double lead_ms;                /* measured input lead (owned + spawnTime only) */
} colyseus_spawn_entry_t;
/* Record an optimistic local spawn; returns its stable id. */
int colyseus_spawns_spawn(colyseus_spawns_t* spawns, void* local);
/* Drop a still-pending prediction (no-op once confirmed). */
void colyseus_spawns_cancel(colyseus_spawns_t* spawns, int id);
/* Exempt a still-pending entry from TTL eviction (server said yes; the
 * authoritative patch is in flight). */
void colyseus_spawns_accept(colyseus_spawns_t* spawns, int id);
/* Route the collection's onAdd/onRemove here (from the callbacks layer). */
void colyseus_spawns_handle_add(colyseus_spawns_t* spawns, colyseus_schema_t* server);
void colyseus_spawns_handle_remove(colyseus_spawns_t* spawns, colyseus_schema_t* server);
/* Advance pending locals (serverNow axis when clocked; `now` paces without). */
void colyseus_spawns_tick(colyseus_spawns_t* spawns, double now);
/* Drop pending locals older than the TTL — mispredicts. */
void colyseus_spawns_prune(colyseus_spawns_t* spawns);
/*
 * Iterate entries in insertion order: pass NULL to start, then feed back what
 * you got. One render path across the handoff — read the local while
 * `confirmed` is false, the server instance after.
 *
 *     for (const colyseus_spawn_entry_t* e = colyseus_spawns_first(store);
 *          e != NULL; e = colyseus_spawns_next(store, e)) { ... }
 *
 * Safe against entries dying between calls (the cursor is the id, not the node).
 */
const colyseus_spawn_entry_t* colyseus_spawns_first(colyseus_spawns_t* spawns);
const colyseus_spawn_entry_t* colyseus_spawns_next(colyseus_spawns_t* spawns,
    const colyseus_spawn_entry_t* entry);
/*
 * Render position of an entry, whichever side of the handoff it is on: the
 * predicted local's field while pending, the authoritative instance's after.
 * `local_field` reads the app's local struct through `local_read` (below);
 * without one, a pending entry reads NAN.
 */
double colyseus_spawns_value(colyseus_spawns_t* spawns,
    const colyseus_spawn_entry_t* entry, const char* field);
/*
 * Route the CONFIRMED side of colyseus_spawns_value() somewhere other than a
 * raw field read — colyseus_predict_bind_spawns() points it at its reckon
 * slots so a confirmed entry reads lead-aware instead of at the last decoded
 * snapshot. Pass NULL to restore the raw read.
 */
void colyseus_spawns_bind_reader(colyseus_spawns_t* spawns,
    double (*read)(colyseus_schema_t* server, const char* field, void* userdata),
    void* userdata);
/* Reads. */
const colyseus_spawn_entry_t* colyseus_spawns_entry_for(colyseus_spawns_t* spawns, colyseus_schema_t* server);
const colyseus_spawn_entry_t* colyseus_spawns_entry(colyseus_spawns_t* spawns, int id);
bool colyseus_spawns_alive(colyseus_spawns_t* spawns, int id);
int colyseus_spawns_size(const colyseus_spawns_t* spawns);
/* Drop everything (keeps the subscription wiring). */
void colyseus_spawns_clear(colyseus_spawns_t* spawns);