platforms/flutter/colyseus_flutter/lib/src/bindings/colyseus_core.dart


  int colyseus_spawns_spawn(
    ffi.Pointer<colyseus_spawns_t> spawns,
    ffi.Pointer<ffi.Void> local,
  ) {
    return _colyseus_spawns_spawn(
      spawns,
      local,
    );
  }

  late final _colyseus_spawns_spawnPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<colyseus_spawns_t>,
              ffi.Pointer<ffi.Void>)>>('colyseus_spawns_spawn');
  late final _colyseus_spawns_spawn = _colyseus_spawns_spawnPtr.asFunction<
      int Function(ffi.Pointer<colyseus_spawns_t>, ffi.Pointer<ffi.Void>)>();

  void colyseus_spawns_cancel(
    ffi.Pointer<colyseus_spawns_t> spawns,
    int id,
  ) {
    return _colyseus_spawns_cancel(
      spawns,
      id,
    );
  }

  late final _colyseus_spawns_cancelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<colyseus_spawns_t>,
              ffi.Int)>>('colyseus_spawns_cancel');
  late final _colyseus_spawns_cancel = _colyseus_spawns_cancelPtr
      .asFunction<void Function(ffi.Pointer<colyseus_spawns_t>, int)>();

  void colyseus_spawns_accept(
    ffi.Pointer<colyseus_spawns_t> spawns,
    int id,
  ) {
    return _colyseus_spawns_accept(
      spawns,
      id,
    );
  }

  late final _colyseus_spawns_acceptPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<colyseus_spawns_t>,
              ffi.Int)>>('colyseus_spawns_accept');
  late final _colyseus_spawns_accept = _colyseus_spawns_acceptPtr
      .asFunction<void Function(ffi.Pointer<colyseus_spawns_t>, int)>();

  void colyseus_spawns_handle_add(
    ffi.Pointer<colyseus_spawns_t> spawns,
    ffi.Pointer<colyseus_schema_t> server,
  ) {
    return _colyseus_spawns_handle_add(
      spawns,
      server,
    );
  }

  late final _colyseus_spawns_handle_addPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<colyseus_spawns_t>,
              ffi.Pointer<colyseus_schema_t>)>>('colyseus_spawns_handle_add');
  late final _colyseus_spawns_handle_add =
      _colyseus_spawns_handle_addPtr.asFunction<
          void Function(ffi.Pointer<colyseus_spawns_t>,
              ffi.Pointer<colyseus_schema_t>)>();

  void colyseus_spawns_handle_remove(
    ffi.Pointer<colyseus_spawns_t> spawns,
    ffi.Pointer<colyseus_schema_t> server,
  ) {
    return _colyseus_spawns_handle_remove(
      spawns,
      server,
    );
  }

  late final _colyseus_spawns_handle_removePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<colyseus_spawns_t>,
                  ffi.Pointer<colyseus_schema_t>)>>(
      'colyseus_spawns_handle_remove');
  late final _colyseus_spawns_handle_remove =
      _colyseus_spawns_handle_removePtr.asFunction<
          void Function(ffi.Pointer<colyseus_spawns_t>,
              ffi.Pointer<colyseus_schema_t>)>();

  void colyseus_spawns_tick(
    ffi.Pointer<colyseus_spawns_t> spawns,
    double now,
  ) {
    return _colyseus_spawns_tick(
      spawns,
      now,
    );
  }

  late final _colyseus_spawns_tickPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<colyseus_spawns_t>,
              ffi.Double)>>('colyseus_spawns_tick');
  late final _colyseus_spawns_tick = _colyseus_spawns_tickPtr
      .asFunction<void Function(ffi.Pointer<colyseus_spawns_t>, double)>();

  void colyseus_spawns_prune(
    ffi.Pointer<colyseus_spawns_t> spawns,
  ) {
    return _colyseus_spawns_prune(
      spawns,
    );
  }

  late final _colyseus_spawns_prunePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<colyseus_spawns_t>)>>(
      'colyseus_spawns_prune');
  late final _colyseus_spawns_prune = _colyseus_spawns_prunePtr
      .asFunction<void Function(ffi.Pointer<colyseus_spawns_t>)>();

  ffi.Pointer<colyseus_spawn_entry_t> colyseus_spawns_first(
    ffi.Pointer<colyseus_spawns_t> spawns,
  ) {
    return _colyseus_spawns_first(
      spawns,
    );
  }

  late final _colyseus_spawns_firstPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<colyseus_spawn_entry_t> Function(
              ffi.Pointer<colyseus_spawns_t>)>>('colyseus_spawns_first');
  late final _colyseus_spawns_first = _colyseus_spawns_firstPtr.asFunction<
      ffi.Pointer<colyseus_spawn_entry_t> Function(
          ffi.Pointer<colyseus_spawns_t>)>();

  ffi.Pointer<colyseus_spawn_entry_t> colyseus_spawns_next(
    ffi.Pointer<colyseus_spawns_t> spawns,
    ffi.Pointer<colyseus_spawn_entry_t> entry,
  ) {
    return _colyseus_spawns_next(
      spawns,
      entry,
    );
  }

  late final _colyseus_spawns_nextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<colyseus_spawn_entry_t> Function(
              ffi.Pointer<colyseus_spawns_t>,
              ffi.Pointer<colyseus_spawn_entry_t>)>>('colyseus_spawns_next');
  late final _colyseus_spawns_next = _colyseus_spawns_nextPtr.asFunction<
      ffi.Pointer<colyseus_spawn_entry_t> Function(
          ffi.Pointer<colyseus_spawns_t>,
          ffi.Pointer<colyseus_spawn_entry_t>)>();

  double colyseus_spawns_value(
    ffi.Pointer<colyseus_spawns_t> spawns,
    ffi.Pointer<colyseus_spawn_entry_t> entry,
    ffi.Pointer<ffi.Char> field,
  ) {
    return _colyseus_spawns_value(
      spawns,
      entry,
      field,
    );
  }

  late final _colyseus_spawns_valuePtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Pointer<colyseus_spawns_t>,
              ffi.Pointer<colyseus_spawn_entry_t>,
              ffi.Pointer<ffi.Char>)>>('colyseus_spawns_value');
  late final _colyseus_spawns_value = _colyseus_spawns_valuePtr.asFunction<
      double Function(ffi.Pointer<colyseus_spawns_t>,
          ffi.Pointer<colyseus_spawn_entry_t>, ffi.Pointer<ffi.Char>)>();

  void colyseus_spawns_bind_reader(
    ffi.Pointer<colyseus_spawns_t> spawns,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Double Function(
                    ffi.Pointer<colyseus_schema_t> server,
                    ffi.Pointer<ffi.Char> field,
                    ffi.Pointer<ffi.Void> userdata)>>
        read,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    return _colyseus_spawns_bind_reader(
      spawns,
      read,
      userdata,
    );
  }

  late final _colyseus_spawns_bind_readerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<colyseus_spawns_t>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Double Function(
                          ffi.Pointer<colyseus_schema_t> server,
                          ffi.Pointer<ffi.Char> field,
                          ffi.Pointer<ffi.Void> userdata)>>,
              ffi.Pointer<ffi.Void>)>>('colyseus_spawns_bind_reader');
  late final _colyseus_spawns_bind_reader =
      _colyseus_spawns_bind_readerPtr.asFunction<
          void Function(
              ffi.Pointer<colyseus_spawns_t>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Double Function(
                          ffi.Pointer<colyseus_schema_t> server,
                          ffi.Pointer<ffi.Char> field,
                          ffi.Pointer<ffi.Void> userdata)>>,
              ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<colyseus_spawn_entry_t> colyseus_spawns_entry_for(
    ffi.Pointer<colyseus_spawns_t> spawns,
    ffi.Pointer<colyseus_schema_t> server,
  ) {
    return _colyseus_spawns_entry_for(
      spawns,
      server,
    );
  }

  late final _colyseus_spawns_entry_forPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<colyseus_spawn_entry_t> Function(
              ffi.Pointer<colyseus_spawns_t>,
              ffi.Pointer<colyseus_schema_t>)>>('colyseus_spawns_entry_for');
  late final _colyseus_spawns_entry_for =
      _colyseus_spawns_entry_forPtr.asFunction<
          ffi.Pointer<colyseus_spawn_entry_t> Function(
              ffi.Pointer<colyseus_spawns_t>,
              ffi.Pointer<colyseus_schema_t>)>();

  ffi.Pointer<colyseus_spawn_entry_t> colyseus_spawns_entry(
    ffi.Pointer<colyseus_spawns_t> spawns,
    int id,
  ) {
    return _colyseus_spawns_entry(
      spawns,
      id,
    );
  }

  late final _colyseus_spawns_entryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<colyseus_spawn_entry_t> Function(
              ffi.Pointer<colyseus_spawns_t>,
              ffi.Int)>>('colyseus_spawns_entry');
  late final _colyseus_spawns_entry = _colyseus_spawns_entryPtr.asFunction<
      ffi.Pointer<colyseus_spawn_entry_t> Function(
          ffi.Pointer<colyseus_spawns_t>, int)>();

  bool colyseus_spawns_alive(
    ffi.Pointer<colyseus_spawns_t> spawns,
    int id,
  ) {
    return _colyseus_spawns_alive(
      spawns,
      id,
    );
  }

  late final _colyseus_spawns_alivePtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<colyseus_spawns_t>,
              ffi.Int)>>('colyseus_spawns_alive');
  late final _colyseus_spawns_alive = _colyseus_spawns_alivePtr
      .asFunction<bool Function(ffi.Pointer<colyseus_spawns_t>, int)>(
          isLeaf: true);

  int colyseus_spawns_size(
    ffi.Pointer<colyseus_spawns_t> spawns,
  ) {
    return _colyseus_spawns_size(
      spawns,
    );
  }

  late final _colyseus_spawns_sizePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<colyseus_spawns_t>)>>(
      'colyseus_spawns_size');
  late final _colyseus_spawns_size = _colyseus_spawns_sizePtr
      .asFunction<int Function(ffi.Pointer<colyseus_spawns_t>)>(isLeaf: true);

  void colyseus_spawns_clear(
    ffi.Pointer<colyseus_spawns_t> spawns,
  ) {
    return _colyseus_spawns_clear(
      spawns,
    );
  }

  late final _colyseus_spawns_clearPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<colyseus_spawns_t>)>>(
      'colyseus_spawns_clear');
  late final _colyseus_spawns_clear = _colyseus_spawns_clearPtr
      .asFunction<void Function(ffi.Pointer<colyseus_spawns_t>)>();

  ffi.Pointer<colyseus_predict_t> colyseus_predict_create(
    ffi.Pointer<colyseus_callbacks_t> callbacks,
    ffi.Pointer<colyseus_room_clock_t> clock,
  ) {
    return _colyseus_predict_create(
      callbacks,
      clock,
    );
  }

  late final _colyseus_predict_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<colyseus_predict_t> Function(
              ffi.Pointer<colyseus_callbacks_t>,
              ffi.Pointer<colyseus_room_clock_t>)>>('colyseus_predict_create');
  late final _colyseus_predict_create = _colyseus_predict_createPtr.asFunction<
      ffi.Pointer<colyseus_predict_t> Function(
          ffi.Pointer<colyseus_callbacks_t>,
          ffi.Pointer<colyseus_room_clock_t>)>();

  /// The one-call entry point: a Predict scoped to `room`, owning the callbacks
  /// layer it needs and wired to the room clock and fixed step. This is what an
  /// app should use — colyseus_predict_create() is for tests and for sharing one
  /// callbacks layer across several Predicts (lab-style per-mode overlays).
  ffi.Pointer<colyseus_predict_t> colyseus_predict_for_room(
    ffi.Pointer<colyseus_room> room,
  ) {
    return _colyseus_predict_for_room(
      room,
    );
  }

  late final _colyseus_predict_for_roomPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<colyseus_predict_t> Function(
              ffi.Pointer<colyseus_room>)>>('colyseus_predict_for_room');
  late final _colyseus_predict_for_room =
      _colyseus_predict_for_roomPtr.asFunction<
          ffi.Pointer<colyseus_predict_t> Function(
              ffi.Pointer<colyseus_room>)>();

  void colyseus_predict_free(
    ffi.Pointer<colyseus_predict_t> p,
  ) {
    return _colyseus_predict_free(
      p,
    );
  }
